# zkp-1

./: README.md  README.zh.md  package.yaml  stack.yaml  zkp.cabal
.github/workflows/: cabal.yml
spec/Data/: Aeson.hs
spec/Data/Pairing/: BN254.hs
spec/Data/Text/Prettyprint/: Doc.hs
src/Protocol/: Groth.hs
test/Test/: Poly.hs
