cabal-version:      1.12
name:               zkp
version:            0.1.0
license:            AllRightsReserved
license-file:       LICENSE
copyright:          2016-2020 Adjoint Inc
maintainer:         stephen@adjoint.io
author:             Adjoint Inc.
homepage:           https://github.com/adjoint-io/zkp#readme
synopsis:           Zero Knowledge Proof Protocol
description:        Zero Knowledge Proof Protocol
category:           Cryptography
build-type:         Simple
extra-source-files:
  README.md
  ChangeLog.md

library
  exposed-modules:    Protocol.Groth
  hs-source-dirs:     src
  other-modules:      Poly
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    GADTs
    OverloadedStrings
    StandaloneDeriving

  build-depends:
      aeson                >=1.4.0  && <1.5
    , arithmetic-circuits  >=0.2.0  && <0.3
    , base                 >=4.12   && <4.14
    , bytestring           >=0.10.8 && <0.11
    , containers           >=0.6.0  && <0.7
    , criterion            >=1.5.0  && <1.6
    , crypto-numbers       >=0.2.7  && <0.3
    , directory            >=1.3.3  && <1.4
    , elliptic-curve       >=0.3.0  && <0.4
    , entropy              >=0.4.1  && <0.5
    , filepath             >=1.4.2  && <1.5
    , galois-fft           >=0.1.0  && <0.2
    , galois-field         >=1.0.0  && <1.1
    , generic-arbitrary    >=0.1.0  && <0.2
    , groups               >=0.4.1  && <0.5
    , mtl                  >=2.2.2  && <2.3
    , pairing              >=1.0.0  && <1.1
    , poly                 >=0.3.2  && <0.4
    , pretty-simple        >=2.0    && <3.3
    , prettyprinter        >=1.2    && <1.6
    , protolude            >=0.2.4  && <0.3
    , QuickCheck           >=2.12.0 && <2.14
    , semirings            >=0.5.0  && <0.6
    , SHA                  >=1.6.4  && <1.7
    , text                 >=1.2    && <2.0
    , vector               >=0.12.0 && <0.13

executable zkp
  main-is:            Main.hs
  hs-source-dirs:     exe
  other-modules:
    Prove
    Reference
    Setup
    Verify

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    GADTs
    OverloadedStrings
    StandaloneDeriving

  ghc-options:
    -Wall -Wno-name-shadowing -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      aeson                 >=1.4.0    && <1.5
    , arithmetic-circuits   >=0.2.0    && <0.3
    , base                  >=4.12     && <4.14
    , bytestring            >=0.10.8   && <0.11
    , containers            >=0.6.0    && <0.7
    , criterion             >=1.5.0    && <1.6
    , crypto-numbers        >=0.2.7    && <0.3
    , directory             >=1.3.3    && <1.4
    , elliptic-curve        >=0.3.0    && <0.4
    , entropy               >=0.4.1    && <0.5
    , filepath              >=1.4.2    && <1.5
    , galois-fft            >=0.1.0    && <0.2
    , galois-field          >=1.0.0    && <1.1
    , generic-arbitrary     >=0.1.0    && <0.2
    , groups                >=0.4.1    && <0.5
    , mtl                   >=2.2.2    && <2.3
    , optparse-applicative  >=0.14.0.0 && <0.16
    , pairing               >=1.0.0    && <1.1
    , poly                  >=0.3.2    && <0.4
    , pretty-simple         >=2.0      && <3.3
    , prettyprinter         >=1.2      && <1.6
    , protolude             >=0.2.4    && <0.3
    , QuickCheck            >=2.12.0   && <2.14
    , semirings             >=0.5.0    && <0.6
    , SHA                   >=1.6.4    && <1.7
    , text                  >=1.2      && <2.0
    , vector                >=0.12.0   && <0.13
    , zkp

test-suite test-zkp
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  hs-source-dirs:     test
  other-modules:
    Paths_zkp
    Test.Arithmetic
    Test.Groth
    Test.Poly

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    GADTs
    OverloadedStrings
    StandaloneDeriving

  ghc-options:
    -Wall -Wno-name-shadowing -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      aeson                >=1.4.0    && <1.5
    , arithmetic-circuits  >=0.2.0    && <0.3
    , base                 >=4.12     && <4.14
    , bytestring           >=0.10.8   && <0.11
    , containers           >=0.6.0    && <0.7
    , criterion            >=1.5.0    && <1.6
    , crypto-numbers       >=0.2.7    && <0.3
    , directory            >=1.3.3    && <1.4
    , elliptic-curve       >=0.3.0    && <0.4
    , entropy              >=0.4.1    && <0.5
    , filepath             >=1.4.2    && <1.5
    , galois-fft           >=0.1.0    && <0.2
    , galois-field         >=1.0.0    && <1.1
    , generic-arbitrary    >=0.1.0    && <0.2
    , groups               >=0.4.1    && <0.5
    , mtl                  >=2.2.2    && <2.3
    , pairing              >=1.0.0    && <1.1
    , poly                 >=0.3.2    && <0.4
    , pretty-simple        >=2.0      && <3.3
    , prettyprinter        >=1.2      && <1.6
    , protolude            >=0.2.4    && <0.3
    , QuickCheck           >=2.13.2   && <2.14
    , semirings            >=0.5.0    && <0.6
    , SHA                  >=1.6.4    && <1.7
    , tasty                >=1.2.3    && <1.3
    , tasty-discover       >=4.2.1    && <4.3
    , tasty-hunit          >=0.10.0.2 && <0.11
    , tasty-quickcheck     >=0.10.1   && <0.11
    , text                 >=1.2      && <2.0
    , vector               >=0.12.0   && <0.13
    , zkp
